Nikhil: Fix width centre alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 1rem 1rem 100px 1rem;
+  width: 100%;
 }
 
 .app {
